--- a/css/main.css
+++ b/css/main.css
@@ -14,30 +14,12 @@ body::before {
   inset: 0;
   z-index: -1;
   pointer-events: none;
-  background: url("../images/bgc.png") no-repeat center;
   background-size: cover;
   -webkit-animation: backgroundZoomAnimate 20s forwards;
           animation: backgroundZoomAnimate 20s forwards;
-  background-image: linear-gradient(to top #232526, #414345);
+  background-image: linear-gradient(to top #004ff9, #fff94c);
 }
 
-@-webkit-keyframes backgroundZoomAnimate {
-  from {
-    transform: scale(1);
-  }
-  to {
-    transform: scale(1.3);
-  }
-}
-
-@keyframes backgroundZoomAnimate {
-  from {
-    transform: scale(1);
-  }
-  to {
-    transform: scale(1.3);
-  }
-}
 .profile-card {
   box-shadow: 0 18px 200px -60px black;
   border-radius: 50px;
@@ -209,4 +191,22 @@ body::before {
 }
 .profile-card__actions > button.two:hover {
   box-shadow: 0 7px 30px rgba(223, 45, 70, 0.75);
+}
+
+@-webkit-keyframes backgroundZoomAnimate {
+  from {
+    transform: scale(1);
+  }
+  to {
+    transform: scale(1.3);
+  }
+}
+
+@keyframes backgroundZoomAnimate {
+  from {
+    transform: scale(1);
+  }
+  to {
+    transform: scale(1.3);
+  }
 }/*# sourceMappingURL=main.css.map */
