--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@ body::before {
   background-size: cover;
   -webkit-animation: backgroundZoomAnimate 20s forwards;
           animation: backgroundZoomAnimate 20s forwards;
-  background-image: linear-gradient(to top #004ff9, #fff94c);
+  background-image: linear-gradient(to top left, #004ff9, #fff94c);
 }
 
 .profile-card {
@@ -179,14 +179,16 @@ body::before {
   }
 }
 .profile-card__actions > button.one {
-  background: linear-gradient(45deg, #1da1f2, #0e71c8);
+  -webkit-backdrop-filter: blur(15px);
+          backdrop-filter: blur(15px);
   box-shadow: 0 4px 30px rgba(10, 127, 212, 0.4);
 }
 .profile-card__actions > button.one:hover {
   box-shadow: 0 7px 30px rgba(223, 45, 70, 0.75);
 }
 .profile-card__actions > button.two {
-  background: linear-gradient(45deg, #fff94c, #ccc615);
+  -webkit-backdrop-filter: blur(15px);
+          backdrop-filter: blur(15px);
   box-shadow: 0 4px 30px rgba(10, 127, 212, 0.4);
 }
 .profile-card__actions > button.two:hover {
